--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Happy Birthday My Love ❤️</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <script>
+  if (window.location.hash === "") {
+    confetti({
+      particleCount: 150,
+      spread: 70,
+      origin: { y: 0.6 }
+    });
+  }
+</script>
   <div id="container">
     <div id="message"></div>
     <div id="image-collage"></div>
