--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <audio id="bgMusic" autoplay loop>
+  <source src="yourmusic.mp3" type="audio/mpeg">
+  Your browser does not support the audio tag.
+</audio>
+<button id="muteBtn">🔊</button>
   <script>
   if (window.location.hash === "") {
     confetti({
