--- a/index.html
+++ b/index.html
@@ -3,128 +3,121 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Birthday Journey</title>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
+  <title>For Her, With Love ❤️</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Background Music -->
+  <audio id="bgMusic" src="yourmusic.mp3" autoplay loop></audio>
+  <button id="muteBtn">🔊</button>
 
-  <!-- Splash Screen -->
-  <section id="splash" class="center-screen">
-    <h1>Happy Birthday ❤️</h1>
-    <button id="startBtn">Start the Journey</button>
-  </section>
+  <!-- Content Container for Each Page -->
+  <div id="content-container">
+    <!-- Dynamic sections will load here -->
+  </div>
 
-  <!-- Themed Sections -->
-  <section id="kid" class="themed-section hidden" data-images="kid">
-    <div class="overlay">
-      <div class="poem-box">
-        <h1>My Little Star 🌟</h1>
-        <p>
-          Once so small with eyes so wide,<br>
-          A world of wonder you held inside.<br>
-          Laughter soft, a glowing face,<br>
-          You filled the world with warmth and grace.<br><br>
-          Your tiny steps, your fearless heart,<br>
-          A masterpiece, a living art.<br>
-          Before I knew you, I somehow knew —<br>
-          I’d fall for the kid who grew into you. ❤️
-        </p>
-        <button class="nextBtn">Next ➡️</button>
-      </div>
-    </div>
-    <div class="bg-slide" id="bg-kid"></div>
-  </section>
+  <!-- Navigation Button -->
+  <button id="nextBtn">Next ➡️</button>
 
-  <section id="bossy" class="themed-section hidden" data-images="bossy">
-    <div class="overlay">
-      <div class="poem-box">
-        <h1>The Queen Within 👑</h1>
-        <p>
-          In every glance, a spark of fire,<br>
-          A voice that dares, a will that’s higher.<br>
-          You walk with purpose, bold and free,<br>
-          A boss in bloom — and that’s all *you*, not me.<br><br>
-          Grace and grit, you lead with flair,<br>
-          I’m left in awe, caught in your stare.
-        </p>
-        <button class="nextBtn">Next ➡️</button>
-      </div>
-    </div>
-    <div class="bg-slide" id="bg-bossy"></div>
-  </section>
+  <script>
+    const pages = [
+      {
+        name: "kid",
+        images: ["images/kid/1.jpg", "images/kid/2.jpg", "images/kid/3.jpg", "images/kid/4.jpg"],
+        poem: `Your laughter, pure like a child's dream,<br>Moments with you, a magical stream,<br>Every sparkle in your eye,<br>Brings stars to my sky.`
+      },
+      {
+        name: "bossy",
+        images: ["images/bossy/1.jpg", "images/bossy/2.jpg", "images/bossy/3.jpg", "images/bossy/4.jpg", "images/bossy/5.jpg"],
+        poem: `You command with such flair,<br>Grace and fire in your stare,<br>Strong, bold, my guiding light,<br>You make everything feel right.`
+      },
+      {
+        name: "teeth",
+        images: ["images/teeth/1.jpg", "images/teeth/2.jpg"],
+        poem: `Your smile, a crooked spell,<br>In your giggles, I dwell,<br>Even your quirks are divine,<br>I’m so glad you're mine.`
+      },
+      {
+        name: "saree",
+        images: ["images/saree/1.jpg", "images/saree/2.jpg", "images/saree/3.jpg", "images/saree/4.jpg"],
+        poem: `Elegance in every fold,<br>You wear tradition bold,<br>Every drape, a story anew,<br>I lose myself looking at you.`
+      },
+      {
+        name: "final",
+        images: ["images/final/1.jpg", "images/final/2.jpg", "images/final/3.jpg", "images/final/4.jpg"],
+        poem: `From every glance to every touch,<br>You’ve given me more than much,<br>This journey, these pages, this song,<br>In my heart, you’ve always belonged.`
+      }
+    ];
 
-  <section id="teeth" class="themed-section hidden" data-images="teeth">
-    <div class="overlay">
-      <div class="poem-box">
-        <h1>That Smile 😄</h1>
-        <p>
-          That dimpled laugh, that silly grin,<br>
-          It pulls me out, it draws me in.<br>
-          In every smile, a secret spell,<br>
-          That only my heart can truly tell.<br><br>
-          You light the world with just your teeth,<br>
-          A joy so raw, so sweet beneath.
-        </p>
-        <button class="nextBtn">Next ➡️</button>
-      </div>
-    </div>
-    <div class="bg-slide" id="bg-teeth"></div>
-  </section>
+    let currentPage = 0;
+    const contentContainer = document.getElementById("content-container");
+    const nextBtn = document.getElementById("nextBtn");
 
-  <section id="saree" class="themed-section hidden" data-images="saree">
-    <div class="overlay">
-      <div class="poem-box">
-        <h1>Grace Draped in Threads 💫</h1>
-        <p>
-          Saree drapes, like moonlight soft,<br>
-          You carry poise that lifts me aloft.<br>
-          Every fold, a story told,<br>
-          Of beauty timeless, brave and bold.<br><br>
-          You’re elegance in every sway,<br>
-          A living poem in display.
-        </p>
-        <button class="nextBtn">Next ➡️</button>
-      </div>
-    </div>
-    <div class="bg-slide" id="bg-saree"></div>
-  </section>
+    function createPageContent({ images, poem }) {
+      const slide = document.createElement("div");
+      slide.className = "page";
 
-  <section id="final" class="themed-section hidden" data-images="final">
-    <div class="overlay">
-      <div class="poem-box">
-        <h1>Forever Yours 💖</h1>
-        <p>
-          In all these frames, one truth remains,<br>
-          My love for you defies all chains.<br>
-          A thousand words may never do,<br>
-          To say how much I cherish you.<br><br>
-          Through every page, each memory's hue —<br>
-          All roads in life lead back to you.
-        </p>
-        <button class="nextBtn">Final Message ➡️</button>
-      </div>
-    </div>
-    <div class="bg-slide" id="bg-final"></div>
-  </section>
+      const bgContainer = document.createElement("div");
+      bgContainer.className = "slideshow";
 
-  <!-- Conclusion Page -->
-  <section id="conclusion" class="themed-section hidden">
-    <div class="overlay">
-      <div class="poem-box">
-        <h1>This Is My Heart 🎈</h1>
-        <p id="personalMessage">
-          You’ve just walked through pieces of you…<br>
-          But what you may not see, is that you’ve made<br>
-          a permanent home in me.<br><br>
-          Thank you for being my light, my fight, my everything.<br>
-          Happy Birthday, love. I’ll never stop celebrating you. 💞
-        </p>
-      </div>
-    </div>
-    <canvas id="balloonsCanvas"></canvas>
-  </section>
+      images.forEach((src, index) => {
+        const img = document.createElement("img");
+        img.src = src;
+        img.style.animationDelay = `${index * 5}s`;
+        bgContainer.appendChild(img);
+      });
 
-  <script src="script.js"></script>
+      const poemDiv = document.createElement("div");
+      poemDiv.className = "poem";
+      poemDiv.innerHTML = poem;
+
+      slide.appendChild(bgContainer);
+      slide.appendChild(poemDiv);
+      contentContainer.innerHTML = "";
+      contentContainer.appendChild(slide);
+    }
+
+    function showFinalAnimation() {
+      nextBtn.style.display = "none";
+      contentContainer.innerHTML = `
+        <div class="final-page">
+          <div class="heart-bg"></div>
+          <div class="poem">Thank you for being born. You are my blessing, my light, my forever. 🌸</div>
+          <div class="balloons"></div>
+        </div>
+      `;
+
+      const balloons = document.querySelector(".balloons");
+      pages.flatMap(p => p.images).forEach((imgSrc, i) => {
+        const balloon = document.createElement("img");
+        balloon.src = imgSrc;
+        balloon.className = "balloon";
+        balloon.style.left = `${Math.random() * 80 + 10}%`;
+        balloon.style.animationDelay = `${i * 0.5}s`;
+        balloons.appendChild(balloon);
+      });
+    }
+
+    nextBtn.addEventListener("click", () => {
+      if (currentPage < pages.length) {
+        createPageContent(pages[currentPage]);
+        currentPage++;
+        if (currentPage === pages.length) nextBtn.textContent = "💌 Finish";
+      } else {
+        showFinalAnimation();
+      }
+    });
+
+    // Start with first page
+    createPageContent(pages[currentPage]);
+    currentPage++;
+
+    // Music Mute Toggle
+    const bgMusic = document.getElementById("bgMusic");
+    const muteBtn = document.getElementById("muteBtn");
+    muteBtn.onclick = () => {
+      bgMusic.muted = !bgMusic.muted;
+      muteBtn.textContent = bgMusic.muted ? "🔇" : "🔊";
+    };
+  </script>
 </body>
 </html>
